First changes in zeromod => LwHaythServ

--- a/server-init.cfg
+++ b/server-init.cfg
@@ -21,7 +21,7 @@ serverbotlimit 16
 publicserver 0
 
 // description server shows for the server browser
-serverdesc "zeromod"
+serverdesc "LwHaythServ"
 
 // password required to connect to the server
 // generally unnecessary unless you really don't want anyone connecting to your server
@@ -40,7 +40,7 @@ exec users.cfg
 updatemaster 1
 
 // optional message of the day to send to players on connect
-// servermotd "zeromod server"
+// servermotd "LwHaythServ server"
 
 // controls whether admin privs are necessary to record a demo
 // when 1 requires admin (default)
