--- a/users.cfg
+++ b/users.cfg
@@ -28,5 +28,6 @@
 // authname is user name
 // authname and domain must match definitions in server; public key and private key must be made out of same secretpass
 
-// example user (me, /dev/zero)
-adduser /dev/zero /dev +a1db0cda60135923178c2c50405083f19af20544d6bca528 m
+adduser "Haytham" "haythserv" "+a18c47f6de865801cb6ef7893885107fab93ef46a67f55ab" "a"
+// example user
+// adduser "your_username" "domain" "publickey" "privilege_level"
