Added GeoIP support

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
 #CXXFLAGS= -O3 -fomit-frame-pointer
-CXXFLAGS= -O2 -pipe -fstack-protector
+CXXFLAGS= -O2 -pipe -fstack-protector -DGEOIPDATADIR -DGEOIP
 override CXXFLAGS+= -Wall -fsigned-char -fno-exceptions -fno-rtti
 
 PLATFORM= $(shell uname -s)
 PLATFORM_PREFIX= native
 
-INCLUDES= -Ishared -Iengine -Ifpsgame -Ienet/include
+INCLUDES= -Ishared -Iengine -Ifpsgame -Ienet/include -Igeoip
 
 STRIP=
 ifeq (,$(findstring -g,$(CXXFLAGS)))
@@ -117,6 +117,8 @@ SERVER_OBJS= \
 	engine/command-standalone.o \
 	engine/server-standalone.o \
 	engine/worldio-standalone.o \
+	geoip/GeoIP-standalone.o \
+        geoip/GeoIPCity-standalone.o \
 	fpsgame/entities-standalone.o \
 	fpsgame/server-standalone.o
 #	engine/world-standalone.o \
@@ -186,6 +188,8 @@ client:	libenet $(CLIENT_OBJS)
 	$(CXX) $(CXXFLAGS) -o sauer_client $(CLIENT_OBJS) $(CLIENT_LIBS)
 
 server:	libenet $(SERVER_OBJS)
+	gcc -O2 -pipe -fstack-protector -DGEOIPDATADIR -DGEOIP -Wall -fsigned-char -fno-exceptions -DSTANDALONE -Igeoip -c -o geoip/GeoIP-standalone.o geoip/GeoIP.c
+	gcc -O2 -pipe -fstack-protector -DGEOIPDATADIR -DGEOIP -Wall -fsigned-char -fno-exceptions -DSTANDALONE -Ishared -Iengine -Ifpsgame -Ienet/include -Igeoip -c -o geoip/GeoIPCity-standalone.o geoip/GeoIPCity.c
 	$(CXX) $(CXXFLAGS) -o sauer_server $(SERVER_OBJS) $(SERVER_LIBS)  
 	
 master: libenet $(MASTER_OBJS)
@@ -490,6 +494,9 @@ fpsgame/server-standalone.o: fpsgame/aiman.h fpsgame/modules.h
 engine/master-standalone.o: shared/cube.h shared/tools.h shared/geom.h
 engine/master-standalone.o: shared/ents.h shared/command.h shared/iengine.h
 engine/master-standalone.o: shared/igame.h
+
+geoip/GeoIP-standalone.o: geoip/GeoIP.c
+geoip/GeoIPCity-standalone.o: geoip/GeoIPCity.c
 
 #engine/world-standalone.o: engine/engine.h shared/cube.h shared/tools.h shared/geom.h
 #engine/world-standalone.o: shared/ents.h shared/command.h shared/iengine.h
