--- a/users.cfg
+++ b/users.cfg
@@ -28,6 +28,6 @@
 // authname is user name
 // authname and domain must match definitions in server; public key and private key must be made out of same secretpass
 
-adduser "Haytham" "haythserv" "+a18c47f6de865801cb6ef7893885107fab93ef46a67f55ab" "a"
+adduser "Haytham" "haythserv" "+a18c47f6de865801cb6ef7893885107fab93ef46a67f55ab" "m"
 // example user
 // adduser "your_username" "domain" "publickey" "privilege_level"
