Update LwHaythServ to latest zeromod version

--- a/server-init.cfg
+++ b/server-init.cfg
@@ -5,7 +5,7 @@
 // serverip N.N.N.N
 
 // optional specific port for server to use
-// serverport 28785
+serverport 10000
 
 // maximum number of allowed clients
 maxclients 32
@@ -21,7 +21,7 @@ serverbotlimit 16
 publicserver 0
 
 // description server shows for the server browser
-serverdesc "LwHaythServ"
+serverdesc "LwHaythServ ~ Testing"
 
 // password required to connect to the server
 // generally unnecessary unless you really don't want anyone connecting to your server
