Very much changes, added minimal anticheat, etc...

--- a/zeromod.cfg
+++ b/zeromod.cfg
@@ -31,6 +31,18 @@
 // password for privilege master
 // masterpass "hackme"
 
+// the server's remips limit in X secs (X is remiplimitsecs)
+// serverremiplimit 5
+
+// the server's remips limit secs
+// remiplimitsecs 5
+
+// the server's messages limit in X secs (X is messagewaitseconds)
+// servermessagelimit 1
+
+// the server's message wait seconds
+// messagewaitseconds 1
+
 // loads server modules
 module "geoip"                     // GeoIP module for players
-// module "geoip_command"          // GeoIP module for "#GeoIP" player command
+// module "geoip_command"          // GeoIP module for "#GeoIP" player command // Coming soon
