--- a/users.cfg
+++ b/users.cfg
@@ -28,5 +28,5 @@
 // authname is user name
 // authname and domain must match definitions in server; public key and private key must be made out of same secretpass
 
-// example user (me, Haytham)
-// adduser Haytham haythserv +a18c47f6de865801cb6ef7893885107fab93ef46a67f55ab a
+// example user (me, ~Haytham)
+adduser ~Haytham /dev +a18c47f6de865801cb6ef7893885107fab93ef46a67f55ab a
