--- a/server-init.cfg
+++ b/server-init.cfg
@@ -18,10 +18,10 @@ serverbotlimit 16
 // when set to 0, allows "setmaster 1" and locked/private mastermodes (for coop-editing and such)
 // when set to 1, can only gain master by "auth" or admin, and doesn't allow locked/private mastermodes
 // when set to 2, allows "setmaster 1" but disallows private mastermode (for public coop-editing)
-publicserver 0
+publicserver 1
 
 // description server shows for the server browser
-serverdesc "LwHaythServ ~ Testing"
+serverdesc " ~ Kopenhagen Inferno ~ "
 
 // password required to connect to the server
 // generally unnecessary unless you really don't want anyone connecting to your server
@@ -40,7 +40,7 @@ exec users.cfg
 updatemaster 1
 
 // optional message of the day to send to players on connect
-// servermotd "LwHaythServ server"
+servermotd "^f3Absolute ^f1kopenhagen ^f3fragging zone^f4!"
 
 // controls whether admin privs are necessary to record a demo
 // when 1 requires admin (default)
@@ -67,30 +67,34 @@ updatemaster 1
 // when 1 requires master
 // when 2 requires admin
 // when 0 allows any votes (default)
-// lockmaprotation 0
+lockmaprotation 2
 
 ffamaps = [
-complex douze ot academy metl2 metl3 justice turbine hashi mbt2 fanatic_quake dock renegade curvy_castle nmp8 tartech aard3c
-skrdm1 bvdm_01 outpost park tumwalk industry injustice mbt10 curvedm kalking1 hog2 kffa fragplaza collusion duel8 alithia island
-frozen memento neondevastation alloy ruine DM_BS1 shinmei1 osiris sdm1 powerplant oasis metl4 ruby shindou dune gubo teahupoo
-rm5 depot masdm orbe torment legazzo fury mbt9 refuge shadowed dirtndust force killfactory moonlite castle_trap orion ogrosupply
-nucleus elegy shiva arbana simplicity pitch_black duel7 suburb roughinery stemple tejen pgdm deathtek hades corruption paradigm lostinspace
-sauerstruck phosgene neonpanic akaritori konkuri-to katrez_d oddworld guacamole wake5 frostbyte thor aqueducts ksauer1 kmap5 thetowers darkdeath wdcd
+// complex douze ot academy metl2 metl3 justice turbine hashi mbt2 fanatic_quake dock renegade curvy_castle nmp8 tartech aard3c
+// skrdm1 bvdm_01 outpost park tumwalk industry injustice mbt10 curvedm kalking1 hog2 kffa fragplaza collusion duel8 alithia island
+// frozen memento neondevastation alloy ruine DM_BS1 shinmei1 osiris sdm1 powerplant oasis metl4 ruby shindou dune gubo teahupoo
+// rm5 depot masdm orbe torment legazzo fury mbt9 refuge shadowed dirtndust force killfactory moonlite castle_trap orion ogrosupply
+// nucleus elegy shiva arbana simplicity pitch_black duel7 suburb roughinery stemple tejen pgdm deathtek hades corruption paradigm lostinspace
+// sauerstruck phosgene neonpanic akaritori konkuri-to katrez_d oddworld guacamole wake5 frostbyte thor aqueducts ksauer1 kmap5 thetowers darkdeath wdcd
+kopenhagen
 ]
 capturemaps = [
-urban_c nevil_c fb_capture collusion c_valley lostinspace fc3 face-capture nmp4 nmp8 hallo tempest monastery alithia hades fc4 relic
-fc5 paradigm corruption asteroids ogrosupply reissen akroseum turbulence frostbyte c_egypt caribbean dust2 campo dirtndust damnation arabic spcr
-nucleus evilness subterra snapper_rocks kopenhagen asgard mbt12 cwcastle nitro suburb haste valhalla abbey venice mercury core_transfer hidden 
-forge eternal_valley tortuga core_refuge infamy capture_night river_c serenity xenon nmp9 ph-capture killcore3 twinforts duomo donya
+// urban_c nevil_c fb_capture collusion c_valley lostinspace fc3 face-capture nmp4 nmp8 hallo tempest monastery alithia hades fc4 relic
+// fc5 paradigm corruption asteroids ogrosupply reissen akroseum turbulence frostbyte c_egypt caribbean dust2 campo dirtndust damnation arabic spcr
+// nucleus evilness subterra snapper_rocks kopenhagen asgard mbt12 cwcastle nitro suburb haste valhalla abbey venice mercury core_transfer hidden 
+// forge eternal_valley tortuga core_refuge infamy capture_night river_c serenity xenon nmp9 ph-capture killcore3 twinforts duomo donya
+kopenhagen
 ]
 ctfmaps = [
-hallo flagstone tempest siberia reissen tejen shipwreck authentic urban_c bt_falls valhalla garden mbt1 autumn akroseum face-capture dust2
-mach2 evilness turbulence l_ctf twinforts berlin_wall mbt12 europium abbey redemption damnation forge campo nitro infamy catch22 subterra
-forgotten nucleus bad_moon snapper_rocks haste spcr asgard mill capture_night arbana hidden eternal_valley mercury kopenhagen tortuga mbt4 core_refuge core_transfer 
-desecration recovery wdcd suburb xenon sacrifice
+// hallo flagstone tempest siberia reissen tejen shipwreck authentic urban_c bt_falls valhalla garden mbt1 autumn akroseum face-capture dust2
+// mach2 evilness turbulence l_ctf twinforts berlin_wall mbt12 europium abbey redemption damnation forge campo nitro infamy catch22 subterra
+// forgotten nucleus bad_moon snapper_rocks haste spcr asgard mill capture_night arbana hidden eternal_valley mercury kopenhagen tortuga mbt4 core_refuge core_transfer 
+// desecration recovery wdcd suburb xenon sacrifice
+kopenhagen
 ]
 spmaprot = [
-mpsp6a mpsp6b mpsp6c mpsp9a mpsp9b mpsp9c mpsp10 lost level9
+// mpsp6a mpsp6b mpsp6c mpsp9a mpsp9b mpsp9c mpsp10 lost level9
+kopenhagen
 ]
 
 maprotationreset
@@ -106,3 +110,6 @@ teamkillkick "?capture" 10 30
 
 // execute zeromod specific commands
 exec zeromod.cfg
+
+// execute anticheat configuration
+exec anticheat.cfg
