Update to latest zeromod version

--- a/conf/zeromod.conf
+++ b/conf/zeromod.conf
@@ -43,6 +43,22 @@
 // the server's message wait seconds
 // messagewaitseconds 1
 
+// if set to 1 server hides clients ip in csl and similar applications
+// if set to 0 (default) server dont hide them
+// serverhideip 0
+
+// controls server intermission interval (in secconds)
+// serverintermission 10
+
+// controls if server shows best stats
+// if set to 0 server doesnt show best stats
+// if set to 1 (default) server show them
+// beststats 1
+
+// controls if server suggest players using #np
+// 1 (default) - server suggest, 0 - it doesnt
+// serversuggestnp 1
+
 // loads server modules
 module "geoip"                     // GeoIP module for players
 // module "geoip_command"          // GeoIP module for "#GeoIP" player command // Coming soon
