--- a/conf/zeromod.conf
+++ b/conf/zeromod.conf
@@ -59,6 +59,14 @@
 // 1 (default) - server suggest, 0 - it doesnt
 // serversuggestnp 1
 
+// the server's /kick time
+// serverkicktime 4
+
+// the server's autokick time
+// autokicktime 6
+
+// whether the server uses geoip in #getip player command
+// or not
+
 // loads server modules
 module "geoip"                     // GeoIP module for players
-// module "geoip_command"          // GeoIP module for "#GeoIP" player command // Coming soon
